First version of the first 2 excercises

--- a/Home Assignment 1/OReL Template.tex
+++ b/Home Assignment 1/OReL Template.tex
@@ -57,8 +57,10 @@
 
 
 \section{Find an online learning problem from real life}
+\input{1.tex}
 
 \section{Follow The Leader (FTL) algorithm for i.i.d.~full information games}
+\input{2.tex}
 
 \section{Improved Parametrization of UCB1}
 
