--- a/Home Assignment 1/OReL Template.tex
+++ b/Home Assignment 1/OReL Template.tex
@@ -46,7 +46,7 @@
 
 \begin{document}
 \title{Online and Reinforcement Learning (2025)\\Home Assignment 1}
-\author{\color{red}Your name and student ID}
+\author{\color{red}Davide Marchi 777881}
 \date{}
 \maketitle
 
@@ -63,6 +63,7 @@
 \input{2.tex}
 
 \section{Improved Parametrization of UCB1}
+\input{3.tex}
 
 \section{Example of Policies in RiverSwim}
 
