Minor fixes, Q7 moved to HA2 Dear students,
Q7 in HA1 deals with a simple experiment to estimate the value function, a concept that is not taught yet. Although the assignment text makes it self sufficient, to avoid potential ambiguities, I decided to move it to HA2, which further gives me the flexibility to make its part (ii) non-optional.

Sorry for the inconvenience.

Best,
Sadegh

--- a/Home Assignment 1/4.tex
+++ b/Home Assignment 1/4.tex
@@ -45,6 +45,6 @@ We construct an example of a history-dependent deterministic policy in RiverSwim
 \textit{Swim two times to the right, then rest for one step by following the current and actively swimming to the left. Repeat this pattern indefinitely.}
 \end{quote}
 
-\textbf{Analysis:} The policy follows a structured cycle (right-right-rest) based on past actions, meaning it is \textbf{history-dependent}. Since the decision at any given step is fully determined by the policy’s rule, it is \textbf{deterministic}.
+\textbf{Analysis:} The policy follows a structured cycle (right-right-left) based on past actions, meaning it is \textbf{history-dependent}. Since the decision at any given step is fully determined by the policy’s rule, it is \textbf{deterministic}.
 
 \textbf{Conclusion:} This policy belongs to \(\Pi^{HD}\) (history-dependent deterministic).
