Controlled first 3 excercises

--- a/Home Assignment 1/1.tex
+++ b/Home Assignment 1/1.tex
@@ -4,13 +4,13 @@ explain what is the set of actions an algorithm can take, what are the losses (o
 range of the losses/rewards, whether the problem is stateless or contextual, and whether the problem is
 i.i.d. or adversarial, and with full information or bandit feedback
 
-\subsection{Post Recommendation on Social Media}
+\subsection{Contents Recommendation on Social Media}
 
-Deciding in real time which article or advertisement to display to a user.
+Deciding in real time which item or advertisement to display to a user.
 
 \begin{itemize}
 \item \textbf{Actions:} \\
-The algorithm chooses one item (news article or ad) from a finite set of options.
+The algorithm chooses one item from a finite set of options to show to the user.
 
 \item \textbf{Reward:} \\
 1 if the user clicks on the suggested content, 0 if the user does not (range [0, 1]). \\
