Fixing exercises instructions and minor fixes

--- a/Home Assignment 1/1.tex
+++ b/Home Assignment 1/1.tex
@@ -2,7 +2,7 @@ Exercise 5.1 (Find an online learning problem from real life). Find two examples
 that fit into the online learning framework (online, not reinforcement!). For each of the two examples
 explain what is the set of actions an algorithm can take, what are the losses (or rewards) and what is the
 range of the losses/rewards, whether the problem is stateless or contextual, and whether the problem is
-i.i.d. or adversarial, and with full information or bandit feedback
+i.i.d. or adversarial, and with full information or bandit feedback.
 
 \subsection{Contents Recommendation on Social Media}
 
