--- a/Home Assignment 1/5.tex
+++ b/Home Assignment 1/5.tex
@@ -18,7 +18,7 @@
     \[
       |S| \;=\; 6 \times 3 \,\times\, 6 \times 3 \;=\; 324.
     \]
-    For simplicity, we take the initial state as
+    We define the initial state as
     \[
       s_{\text{init}} \;=\; (0,\,0,\,1,\,2).
     \]
