--- a/Home Assignment 1/4.tex
+++ b/Home Assignment 1/4.tex
@@ -5,31 +5,31 @@ We classify the given policies into one of the four policy classes:
 \(\Pi^{HD}\) (history-dependent deterministic), and \(\Pi^{HR}\) (history-dependent randomized). 
 
 \begin{enumerate}
-    \item[\textbf{(i)}] \(\pi_a\): Swim to the right if the current state is not 1; otherwise, swim to the left.
+    \item[\textbf{(i)}] \(\pi_a\): Swim to the right if the current state is not 1; otherwise swim to the left.
     
     \textbf{Analysis:} This policy depends only on the current state, meaning it is \textbf{stationary}. Furthermore, it selects actions deterministically (without randomness). 
     
     \textbf{Conclusion:} \(\pi_a \in \Pi^{SD}\).
 
-    \item[\textbf{(ii)}] \(\pi_b\): If the time slot \(t\) is an even integer, swim to the right; otherwise, flip a fair coin and swim right (resp. left) if the outcome is ‘Head’ (resp. ‘Tail’).
+    \item[\textbf{(ii)}] \(\pi_b\):  If time slot \(t\) is an even integer, swim to the right; otherwise, flip a fair coin, then swim to right (resp. left) if the outcome is ‘Head’ (resp. ‘Tail’).
 
     \textbf{Analysis:} Since the decision process explicitly depends on \(t\), the policy is \textbf{history-dependent}. Additionally, since the agent flips a coin on odd time steps, it involves randomness. 
 
     \textbf{Conclusion:} \(\pi_b \in \Pi^{HR}\) (history-dependent randomized).
     
-    \item[\textbf{(iii)}] \(\pi_c\): At \(t=1\), swim to the left. For \(t>1\), swim to the right if the index of the previous state is odd; otherwise, swim to the left.
+    \item[\textbf{(iii)}] \(\pi_c\): At \(t=1\), swim to the left. For \(t>1\), swim to the right if the index of the previous state is odd; otherwise swim to the left. (For \(t=1\), swim to the left.)
 
     \textbf{Analysis:} The decision process depends on both the time step \(t\) and the previous state, meaning the policy is \textbf{history-dependent}. However, it does not involve randomness.
 
     \textbf{Conclusion:} \(\pi_c \in \Pi^{HD}\) (history-dependent deterministic).
 
-    \item[\textbf{(iv)}] \(\pi_d\): Flip a fair coin. If the outcome is ‘Head’ and the current state is either \(L-1\) or \(L\), then swim to the right; otherwise, swim to the left.
+    \item[\textbf{(iv)}] \(\pi_d\): Flip a fair coin. If the outcome is ‘Head’ and the current state is either \(L-1\) or \(L\), then swim to the right; otherwise swim to the left.
 
     \textbf{Analysis:} The decision depends only on the current state, meaning it is \textbf{stationary}. However, since it involves coin flips, it is a \textbf{randomized} policy.
 
     \textbf{Conclusion:} \(\pi_d \in \Pi^{SR}\) (stationary randomized).
 
-    \item[\textbf{(v)}] \(\pi_e\): If it rains, swim to the right; otherwise, swim to the left. (Raining is independent of the agent’s swimming direction and position.)
+    \item[\textbf{(v)}] \(\pi_e\):  If it rains, swim to the right; otherwise, swim to the left. (It rains independently of the agent’s swimming direction and position.)
 
     \textbf{Analysis:} The decision at each time step depends only on the current state and an external random variable (whether it rains). Since rain is independent of past history, the policy is \textbf{stationary} but \textbf{randomized}.
 
@@ -39,12 +39,14 @@ We classify the given policies into one of the four policy classes:
 
 \subsection*{Part 2}
 
-We construct an example of a history-dependent deterministic policy in RiverSwim that is not stationary. The proposed policy is:
+Make an arbitrary example of a history-dependent deterministic policy in River-Swim. The policy must not be stationary.
+
+The proposed policy is:
 
 \begin{quote}
-\textit{Swim two times to the right, then rest for one step by following the current and actively swimming to the left. Repeat this pattern indefinitely.}
+\textit{At the first visit to state \( L-1 \), swim to the right. At every subsequent visit to \( L-1 \), swim to the left. Otherwise, always swim to the right.}
 \end{quote}
 
-\textbf{Analysis:} The policy follows a structured cycle (right-right-left) based on past actions, meaning it is \textbf{history-dependent}. Since the decision at any given step is fully determined by the policy’s rule, it is \textbf{deterministic}.
+\textbf{Analysis:} This policy is \textbf{history-dependent} because the action taken at state \( L-1 \) depends on whether it is the first visit or a later visit. The decision rule is not simply a function of the current state but requires memory of past visits. Additionally, there is no randomization, so it is \textbf{deterministic}.
 
-\textbf{Conclusion:} This policy belongs to \(\Pi^{HD}\) (history-dependent deterministic).
+\textbf{Conclusion:} This policy belongs to \( \Pi^{HD} \) (history-dependent deterministic).
