--- a/Home Assignment 1/5.tex
+++ b/Home Assignment 1/5.tex
@@ -40,20 +40,19 @@
         0, & \text{otherwise.}
       \end{cases}
     \]
-    We then apply the usual discounted return framework with discount factor
-    \(\gamma \in (0,1)\).  As discussed in class, we do not explicitly encode \(\gamma\) into the states.
+    We then discount the reward by multiplying it by \(\gamma^{t-1}\), to encourage the agents to chose the best actions from the very beginning.
 
   \item[\textbf{(iii)}]
     \textbf{Transition Probabilities.} \\
-    We now specify the transition kernel
+    We now specify the transition probabilities
     \[
       P\bigl(s' \mid s, a\bigr),
     \]
     focusing on the example where the agent is at \(\text{Bank 1}\) and the police is at \(\text{Bank 4}\).  In coordinates, let
     \[
-      s \;=\; (\,0,\,0,\,0,\,2).
+      s \;=\; (\,0,\,0,\,0,\,5).
     \]
-    (Here \((0,0)\) denotes Bank~1 in row~0, column~0, and \((0,2)\) denotes Bank~4 in row~0, column~2.)
+    (Here \((0,0)\) denotes Bank~1 in row~0, column~0, and \((0,5)\) denotes Bank~4 in row~0, column~5.)
 
     We assume that \emph{walls act as reflectors}.  Concretely, if either the agent or the police attempts to move outside the grid, they are moved in the opposite direction by the same distance.  For instance:
     \begin{itemize}
@@ -76,27 +75,25 @@
 
     \paragraph{Police's move.}
     Meanwhile, since the police is in the same row as the agent but to the right
-    \(\bigl( (0,2) \text{ vs. } (0,0) \bigr)\), the problem statement tells us that it moves
+    \(\bigl( (0,5) \text{ vs. } (0,0) \bigr)\), the problem statement tells us that it moves
     \(\uparrow\), \(\downarrow\), or \(\leftarrow\) with probability \(1/3\) each, again with reflection at the walls as described. Specifically:
     \begin{itemize}
-      \item With probability \(\frac{1}{3}\): police tries "Up"; since it's at row 0, it bounces to row 1, yielding \((1,2)\).
-      \item With probability \(\frac{1}{3}\): police tries "Down"; this is valid and leads to \((1,2)\).
-      \item With probability \(\frac{1}{3}\): police tries "Left"; this moves it from \((0,2)\) to \((0,1)\).
+      \item With probability \(\frac{1}{3}\): police tries "Up"; since it's at row 0, it bounces to row 1, yielding \((1,5)\).
+      \item With probability \(\frac{1}{3}\): police tries "Down"; this is valid and leads to \((1,5)\).
+      \item With probability \(\frac{1}{3}\): police tries "Left"; this moves it from \((0,5)\) to \((0,4)\).
     \end{itemize}
 
     \paragraph{Combining to get next-state probabilities.}
     \begin{itemize}
-      \item \((1,2)\) with probability \(\frac{2}{3}\) (sum of Up/Down probabilities).
-      \item \((0,1)\) with probability \(\frac{1}{3}\).
+      \item \((1,5)\) with probability \(\frac{2}{3}\) (sum of Up/Down probabilities).
+      \item \((0,4)\) with probability \(\frac{1}{3}\).
     \end{itemize}
 
     So the next state is:
     \begin{itemize}
-      \item \((0,1,1,2)\) with probability \(\frac{2}{3}\).
-      \item \((0,1,0,1)\) with probability \(\frac{1}{3}\).
+      \item \((?,?,1,2)\) with probability \(\frac{2}{3}\).
+      \item \((?,?,0,1)\) with probability \(\frac{1}{3}\).
     \end{itemize}
-
-    One can similarly list the possible next states and their probabilities for the other agent actions.
 
 \end{enumerate}
 
