--- a/Home Assignment 1/5.tex
+++ b/Home Assignment 1/5.tex
@@ -43,57 +43,85 @@
     We then discount the reward by multiplying it by \(\gamma^{t-1}\), to encourage the agents to chose the best actions from the very beginning.
 
   \item[\textbf{(iii)}]
-    \textbf{Transition Probabilities.} \\
+    \textbf{Transition Probabilities (with reflecting walls).} \\
     We now specify the transition probabilities
     \[
       P\bigl(s' \mid s, a\bigr),
     \]
-    focusing on the example where the agent is at \(\text{Bank 1}\) and the police is at \(\text{Bank 4}\).  In coordinates, let
+    focusing on the example where the agent is at \(\text{Bank 1}\) and the police is at \(\text{Bank 4}\). 
+    In coordinates, let
     \[
       s \;=\; (\,0,\,0,\,0,\,5).
     \]
     (Here \((0,0)\) denotes Bank~1 in row~0, column~0, and \((0,5)\) denotes Bank~4 in row~0, column~5.)
 
-    We assume that \emph{walls act as reflectors}.  Concretely, if either the agent or the police attempts to move outside the grid, they are moved in the opposite direction by the same distance.  For instance:
+    \paragraph{Wall dynamics.}
+    If either the agent or the police attempts to move outside the grid, 
+    they \emph{remain in their current cell} (i.e.\ the move has no effect).
+    For instance:
     \begin{itemize}
-      \item If the agent (or police) is at row \(0\) and attempts to move \(\uparrow\), they end up at row \(1\).
-      \item If at column \(0\) and an action tries to move \(\leftarrow\), they end up at column \(1\).
-      \item All other moves within the grid follow the usual row or column increment/decrement (bounded between row~\(0\) and row~\(5\), and column~\(0\) and column~\(2\)).
+      \item If the agent (or police) is at row~0 and an \(\uparrow\) action is chosen,
+            they remain in row~0.
+      \item If at column~0 and a \(\leftarrow\) action is chosen,
+            they remain in column~0.
+      \item All other moves within the grid follow the usual row or column increment/decrement,
+            bounded between row~\(0\) and row~\(2\), and column~\(0\) and column~\(5\).
     \end{itemize}
-
+    
     \paragraph{Agent's move.}
-    From \(
-    (r_{\text{agent}},c_{\text{agent}}) = (0,0)\),
-    the next agent position \((r_{\text{agent}}',c_{\text{agent}}')\) is:
+    From \((r_{\text{agent}},\,c_{\text{agent}}) = (0,\,0)\), 
+    and given the predefined action-space, the next agent position 
+    \(\bigl(r_{\text{agent}}',\,c_{\text{agent}}'\bigr)\) is determined by the followings:
     \begin{itemize}
-      \item \(\uparrow\):  attempts to go out of the grid (row~\(-1\)), then reflects and ends at \((1,0)\).
-      \item \(\downarrow\): moves to \((1,0)\) normally (assuming row~\(0\) is top).
-      \item \(\leftarrow\): attempts \((0,-1)\), reflects to \((0,1)\).
-      \item \(\rightarrow\): moves to \((0,1)\) normally.
-      \item \(\text{stay}\): remains at \((0,0)\).
+      \item With probability \(\pi(\uparrow\lvert\,s)\): agent tries \(\uparrow\); 
+            but at row~0, it stays in \((0,0)\).
+      \item With probability \(\pi(\leftarrow\lvert\,s)\): agent tries \(\leftarrow\); 
+            but at column~0, it stays in \((0,0)\).
+      \item With probability \(\pi(\rightarrow\lvert\,s)\): agent tries \(\rightarrow\); 
+            this is valid, leading to \((0,1)\).
+      \item With probability \(\pi(\downarrow\lvert\,s)\): agent tries \(\downarrow\); 
+            this is valid, leading to \((1,0)\).
+      \item With probability \(\pi(\text{stay}\lvert\,s)\): agent tries \text{stay}; 
+            this is valid, leading to \((0,0)\).
+      
     \end{itemize}
 
     \paragraph{Police's move.}
-    Meanwhile, since the police is in the same row as the agent but to the right
-    \(\bigl( (0,5) \text{ vs. } (0,0) \bigr)\), the problem statement tells us that it moves
-    \(\uparrow\), \(\downarrow\), or \(\leftarrow\) with probability \(1/3\) each, again with reflection at the walls as described. Specifically:
+    Meanwhile, since the police is in the same row as the agent but to the right 
+    \(\bigl((0,5)\,\text{vs.}\,(0,0)\bigr)\), 
+    the problem statement tells us it moves 
+    \(\uparrow\), \(\downarrow\), or \(\leftarrow\) with probability \(\tfrac{1}{3}\) each. 
+    Specifically:
     \begin{itemize}
-      \item With probability \(\frac{1}{3}\): police tries "Up"; since it's at row 0, it bounces to row 1, yielding \((1,5)\).
-      \item With probability \(\frac{1}{3}\): police tries "Down"; this is valid and leads to \((1,5)\).
-      \item With probability \(\frac{1}{3}\): police tries "Left"; this moves it from \((0,5)\) to \((0,4)\).
+      \item With probability \(\tfrac{1}{3}\): police tries \texttt{Up}; 
+            but at row~0, it stays in \((0,5)\).
+      \item With probability \(\tfrac{1}{3}\): police tries \texttt{Down}; 
+            this is valid, leading to \((1,5)\).
+      \item With probability \(\tfrac{1}{3}\): police tries \texttt{Left}; 
+            this is valid, leading to \((0,4)\).
     \end{itemize}
 
-    \paragraph{Combining to get next-state probabilities.}
-    \begin{itemize}
-      \item \((1,5)\) with probability \(\frac{2}{3}\) (sum of Up/Down probabilities).
-      \item \((0,4)\) with probability \(\frac{1}{3}\).
-    \end{itemize}
+    \paragraph{Combining to get next‐state probabilities.}
+    Let \(\bigl(r_{\text{agent}}',c_{\text{agent}}'\bigr)\) be the agent’s new position 
+    after action~\(a\), 
+    and \(\bigl(r_{\text{police}}',c_{\text{police}}'\bigr)\) be the result of the police’s stochastic move.  
+    In general, the full next state is 
+    \[
+      s' \;=\; \bigl(r_{\text{agent}}',\,c_{\text{agent}}',\,r_{\text{police}}',\,c_{\text{police}}'\bigr).
+    \]
+    Because the agent’s sequence of actions depends on a policy \(\pi\) (which we do not yet know), 
+    we keep \(\pi(a\,\lvert\,s)\) for the probability that action~\(a\) is chosen in state~\(s\). 
+    
+    What we end up with is:
 
-    So the next state is:
-    \begin{itemize}
-      \item \((?,?,1,2)\) with probability \(\frac{2}{3}\).
-      \item \((?,?,0,1)\) with probability \(\frac{1}{3}\).
-    \end{itemize}
+    \begin{align*}
+      P(0, 0, ?, ?) &= \pi(\uparrow \mid s) + \pi(\leftarrow \mid s) + \pi(\text{stay} \mid s) \\
+      P(0, 1, ?, ?) &= \pi(\rightarrow \mid s) \\
+      P(1, 0, ?, ?) &= \pi(\downarrow \mid s) \\
+      P(?, ?, 0, 5) &= \tfrac{1}{3} \\
+      P(?, ?, 1, 5) &= \tfrac{1}{3} \\
+      P(?, ?, 0, 4) &= \tfrac{1}{3}
+    \end{align*}
 
 \end{enumerate}
 
