--- a/Home Assignment 1/5.tex
+++ b/Home Assignment 1/5.tex
@@ -112,6 +112,7 @@
     Because the agent’s sequence of actions depends on a policy \(\pi\) (which we do not yet know), 
     we keep \(\pi(a\,\lvert\,s)\) for the probability that action~\(a\) is chosen in state~\(s\). 
     
+    Now, using ? as a placeholder to reflect every possible value assumable by a certain variable.
     What we end up with is:
 
     \begin{align*}
@@ -122,6 +123,22 @@
       P(?, ?, 1, 5) &= \tfrac{1}{3} \\
       P(?, ?, 0, 4) &= \tfrac{1}{3}
     \end{align*}
+
+    We can then summarize the transition probabilities in of the 9 possible states \(s'\) in the following table:
+
+    \begin{table}[h]
+    \centering
+    \resizebox{\textwidth}{!}{%
+    \begin{tabular}{c|ccc}
+    \textbf{Agent $\backslash$ Police} & $(?, ?, 0,5)$ & $(?, ?, 1,5)$ & $(?, ?, 0,4)$ \\ \hline
+    $(0,0,?,?)$ & $\tfrac{1}{3}\Bigl(\pi(\uparrow\mid s)+\pi(\leftarrow\mid s)+\pi(\text{stay}\mid s)\Bigr)$ & $\tfrac{1}{3}\Bigl(\pi(\uparrow\mid s)+\pi(\leftarrow\mid s)+\pi(\text{stay}\mid s)\Bigr)$ & $\tfrac{1}{3}\Bigl(\pi(\uparrow\mid s)+\pi(\leftarrow\mid s)+\pi(\text{stay}\mid s)\Bigr)$ \\
+    $(0,1,?,?)$ & $\tfrac{1}{3}\pi(\rightarrow\mid s)$ & $\tfrac{1}{3}\pi(\rightarrow\mid s)$ & $\tfrac{1}{3}\pi(\rightarrow\mid s)$ \\
+    $(1,0,?,?)$ & $\tfrac{1}{3}\pi(\downarrow\mid s)$ & $\tfrac{1}{3}\pi(\downarrow\mid s)$ & $\tfrac{1}{3}\pi(\downarrow\mid s)$ \\
+    \end{tabular}%
+    }
+    \caption{Transition probabilities for combined agent and police moves.}
+    \label{tab:transition-probs}
+    \end{table}
 
 \end{enumerate}
 
