--- a/Home Assignment 1/5.tex
+++ b/Home Assignment 1/5.tex
@@ -40,7 +40,7 @@
         0, & \text{otherwise.}
       \end{cases}
     \]
-    We then discount the reward by multiplying it by \(\gamma^{t-1}\), to encourage the agents to chose the best actions from the very beginning.
+    We then discount the reward by multiplying it by \(\gamma^{t-1}\), to encourage the agents to choose the best actions from the very beginning.
 
   \item[\textbf{(iii)}]
     \textbf{Transition Probabilities (with reflecting walls).} \\
@@ -112,7 +112,7 @@
     Because the agent’s sequence of actions depends on a policy \(\pi\) (which we do not yet know), 
     we keep \(\pi(a\,\lvert\,s)\) for the probability that action~\(a\) is chosen in state~\(s\). 
     
-    Now, using ? as a placeholder to reflect every possible value assumable by a certain variable.
+    Now, using ? as a placeholder to reflect every possible value that a certain variable can assume.
     What we end up with is:
 
     \begin{align*}
