Minor adjustments to improve clarity

--- a/Home Assignment 1/2.tex
+++ b/Home Assignment 1/2.tex
@@ -165,7 +165,7 @@ Hence,
 \]
 
 \paragraph{Geometric series.}
-Note that $\sum_{t=1}^\infty \delta(t)$ converges, since
+We observe that $\sum_{t=1}^\infty \delta(t)$ forms a convergent geometric-like series, since:
 \[
   \sum_{t=1}^\infty
   \exp\bigl(-\,c\,(t-1)\,\Delta^2\bigr)
